--- a/source/renderer/app/components/widgets/AssetToken.scss
+++ b/source/renderer/app/components/widgets/AssetToken.scss
@@ -1,4 +1,15 @@
 .component {
+  width: 100%;
+  > span {
+    width: 100%;
+  }
+  :global {
+    [data-tippy-root] {
+      pointer-events: all !important;
+    }
+  }
+}
+.content {
   display: flex;
   position: relative;
   width: 100%;
@@ -34,6 +45,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
   .fingerprint {
     margin-bottom: 10px;
   }
