--- a/source/renderer/app/components/widgets/AssetToken.scss
+++ b/source/renderer/app/components/widgets/AssetToken.scss
@@ -44,6 +44,7 @@
   display: flex;
   flex-direction: column;
   padding: 8px 0;
+  user-select: text;
   .fingerprint {
     cursor: pointer;
     margin-bottom: 10px;
