[DDW-500] Styling adjustments

--- a/source/renderer/app/components/widgets/AssetToken.scss
+++ b/source/renderer/app/components/widgets/AssetToken.scss
@@ -104,7 +104,7 @@
     height: 10px;
     line-height: 0;
     opacity: 0;
-    transition: opacity 0.25s;
+    transition: opacity 0s;
     svg {
       height: 10px;
       width: 8px;
@@ -115,5 +115,8 @@
     svg > path {
       stroke: var(--theme-widgets-asset-token-text-color);
     }
+  }
+  .copiedIcon {
+    opacity: 1;
   }
 }
