DDW-500 Implement design for native tokens - fixes for multiple assets dropdowns

--- a/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
@@ -196,6 +196,11 @@
   margin-top: 0;
   text-transform: uppercase;
   width: 143px;
+
+  &.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
 }
 
 .clearAssetContainer {
