--- a/source/renderer/app/containers/status/DaedalusDiagnosticsDialog.scss
+++ b/source/renderer/app/containers/status/DaedalusDiagnosticsDialog.scss
@@ -1,3 +1,5 @@
+@import '../../themes/mixins/overlay-backdrop';
+
 .overlay {
   bottom: 0;
   left: 0;
@@ -6,6 +8,7 @@
   right: 0;
   top: 0;
   z-index: 9999;
+  @include overlay-backrop;
 
   *::-webkit-scrollbar-button {
     height: 36px;
