--- a/source/renderer/app/components/appUpdate/AppUpdateOverlay.scss
+++ b/source/renderer/app/components/appUpdate/AppUpdateOverlay.scss
@@ -1,4 +1,5 @@
 @import '../../themes/mixins/link';
+@import '../../themes/mixins/overlay-backdrop';
 
 .component {
   align-items: center;
@@ -13,6 +14,7 @@
   top: 0;
   width: 100vw;
   z-index: 22;
+  @include overlay-backrop;
 
   .content {
     background-color: var(--theme-news-overlay-update-content-background-color);
