--- a/source/renderer/app/components/news/AlertsOverlay.scss
+++ b/source/renderer/app/components/news/AlertsOverlay.scss
@@ -1,3 +1,5 @@
+@import '../../themes/mixins/overlay-backdrop';
+
 .component {
   align-items: center;
   background-color: rgba(255, 185, 35, 0.98);
@@ -11,6 +13,7 @@
   top: 0;
   width: 100vw;
   z-index: 22;
+  @include overlay-backrop;
 
   .actionBtn {
     background-color: rgba(45, 45, 45, 0.1);
