[DDW-544] Add pool tooltip border radius

--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -4,6 +4,7 @@
 .component {
   @extend %regularText;
   background: var(--theme-staking-stake-pool-tooltip-background-color);
+  border-radius: 5px;
   padding: 10px;
   text-align: initial;
   user-select: text;
