[DDW-149] Fix undelegate wallet box style

--- a/source/renderer/app/components/wallet/settings/WalletSettings.scss
+++ b/source/renderer/app/components/wallet/settings/WalletSettings.scss
@@ -48,6 +48,9 @@
       p:first-child {
         margin-bottom: 15px;
       }
+      p:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 
