--- a/source/renderer/app/components/wallet/transactions/FilterDialog.scss
+++ b/source/renderer/app/components/wallet/transactions/FilterDialog.scss
@@ -12,9 +12,13 @@
       overflow-y: visible;
 
       .Dialog_content {
+        margin-bottom: 0;
         overflow: visible;
-        padding-bottom: 0;
       }
+    }
+
+    .Dialog_actions {
+      display: none;
     }
 
     .TinySelect_component {
