[DDW-556] The calendar is displayed inside the "Filter" modal (#2387)
* [DDW-556] Fix filter dialog calendar styles

* [DDW-556] Update changelog

* [DDW-556] Remove bottom margin

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/wallet/transactions/FilterDialog.scss
+++ b/source/renderer/app/components/wallet/transactions/FilterDialog.scss
@@ -7,9 +7,18 @@
   width: 400px;
 
   :global {
-    .Dialog_content {
-      overflow: visible;
-      padding-bottom: 0;
+    .Dialog_contentWrapper {
+      overflow-x: visible;
+      overflow-y: visible;
+
+      .Dialog_content {
+        margin-bottom: 0;
+        overflow: visible;
+      }
+    }
+
+    .Dialog_actions {
+      display: none;
     }
 
     .TinySelect_component {
