[DDW-149] Undelegating a wallet (#2351)
* [DDW-149] Implement undelegate wallet dialog on wallet settings screen

* [DDW-149] Update changelog

* [DDW-149] Update fees and deposit of undelegate wallet confirmation dialog

* [DDW-149] Show fees as absolute value on delegation/undelegation dialogs

* [DDW-149] Hide undelegate wallet panel for byron wallet

* [DDW-149] Add disability to undelegate wallet button

* [DDW-149] Disable undelegate button when wallet is not delegated yet or being restored

* [DDW-149] Fix flow test

* [DDW-149] Update undelegate wallet panel on wallet settings screen

* [DDW-149] Update undelegate wallet title translations

* [DDW-149] Update undelegate wallet translations

* [DDW-149] Enable hardware wallet undelegation

* [DDW-149] Fix delegation fee calculation handler

* [DDW-149] Remove unnecessary undelege wallet handlers

* [DDW-149] Add delegate and undelegate config

* [DDW-149] Update undeleate wallet variable naming

* [DDW-149] Remove unnecessary fee absolute value transformation

* [DDW-149] Update config variable names

* [DDW-149] Remove unnecessary variable of stake pool quit request payload

* [DDW-149] Adjust undelegate wallet box margin

* [DDW-149] Update undelegate wallet success dialog naming

* [DDW-149] Update undelegate wallet panel button click handler names

* [DDW-149] Update undelegate wallet panel styles

* [DDW-149] Update undelegate wallet panel styles

* [DDW-149] Add undelegate wallet config comment

* [DDW-149] Update props definition of undelegate wallet dialog container

* [DDW-149] Fix storybook error

* [DDW-149] Add hardware wallet story for undelegating

* [DDW-149] Change Wallet Settings Delegation to reflect Future Epoch

* [DDW-149] Fix issue with null status

* [DDW-149] Add Storybook groupId

* Updates CHANGELOG, Disables 'Voting Center' for Flight builds

* Re-enable Voting registration on Flight

* [DDW-149] Merges develop

* [

--- a/source/renderer/app/components/wallet/settings/WalletSettings.scss
+++ b/source/renderer/app/components/wallet/settings/WalletSettings.scss
@@ -24,8 +24,8 @@
     margin-top: 20px;
   }
 
+  .undelegateWalletBox,
   .deleteWalletBox {
-    margin-bottom: 20px;
     margin-top: 20px;
 
     span {
@@ -48,7 +48,22 @@
       p:first-child {
         margin-bottom: 15px;
       }
+      p:last-child {
+        margin-bottom: 0;
+      }
     }
+  }
+
+  .undelegateWalletBox {
+    :global {
+      .SimpleButton_root.flat {
+        color: var(--theme-color-error);
+      }
+    }
+  }
+
+  .deleteWalletBox {
+    margin-bottom: 20px;
   }
 }
 
