--- a/source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/settings/UndelegateWalletConfirmationDialog.scss
@@ -29,31 +29,61 @@
 
   .divider {
     border-top: 1px solid
-      var(--theme-staking-delegation-center-divider-border-color);
+      var(--theme-settings-undelegate-wallet-divider-border-color);
     height: 1px;
     margin: 20px 0;
     width: 100%;
   }
 
-  .feesWrapper {
+  .feesRow {
+    align-items: center;
+    display: flex;
     font-family: var(--font-medium);
     font-weight: 500;
+    justify-content: space-between;
     line-height: 1.38;
     margin-bottom: 20px;
 
-    .calculatingFeesLabel {
+    .feesWrapper,
+    .depositWrapper {
+      flex: 1;
+    }
+
+    .feesLabel,
+    .depositLabel {
+      color: var(--theme-delegation-steps-confirmation-fees-label-color);
+      margin-bottom: 6px;
+    }
+
+    .calculatingFeesLabel,
+    .calculatingDepositLabel {
       @include animated-ellipsis($duration: 1500, $width: 20px);
       --webkit-backface-visibility: hidden;
     }
 
-    .feesAmount {
-      color: var(--theme-staking-delegation-center-fees-amount-color);
+    .feesAmount,
+    .depositAmount {
       user-select: text;
 
-      .feesAmountLabel {
+      .feesAmountLabel,
+      .depositAmountLabel {
         font-family: var(--font-light);
       }
     }
+
+    .feesAmount {
+      color: var(--theme-settings-undelegate-wallet-fees-amount-color);
+    }
+
+    .depositAmount {
+      color: var(--theme-settings-undelegate-wallet-deposit-amount-color);
+    }
+  }
+
+  .hardwareWalletStatusWrapper {
+    margin-top: 20px;
+    max-width: 640px;
+    width: 100%;
   }
 
   .error {
