--- a/source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
@@ -1,10 +1,3 @@
-.component {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(auto-fill, 80px);
-  justify-content: space-between;
-}
-
 .preloadingBlockWrapper {
   align-items: center;
   display: flex;
@@ -17,4 +10,11 @@
       margin: 0;
     }
   }
+}
+
+.tiles {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fill, 80px);
+  justify-content: space-between;
 }
