--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -234,7 +234,7 @@
         text-overflow: ellipsis;
         white-space: nowrap;
 
-        span {
+        .ticker {
           cursor: pointer;
           padding-left: 2px;
         }
