[DDW-500] [DDW-500] AssetToken in the WalletSendConfirmation

--- a/source/renderer/app/components/wallet/WalletAssetsSendConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendConfirmationDialog.scss
@@ -120,9 +120,17 @@
       width: 100%;
 
       h3 {
+        display: inline-flex;
         font-family: var(--font-light);
+        > span {
+          margin-right: 12px;
+        }
       }
     }
+  }
+
+  .assetToken {
+    margin-top: -2px;
   }
 
   .amountFeesWrapper {
