DDW-500 Implement design for native tokens - send form updates

--- a/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
@@ -265,13 +265,13 @@
 }
 
 .calculatingFeesContainer {
-  bottom: 0.5px;
   display: flex;
   height: 48px;
   line-height: 48px;
   padding-left: 20px;
   position: absolute;
   right: 11px;
+  top: 46.5px;
 
   .calculatingFeesSpinnerButton {
     background-color: var(
