--- a/source/renderer/app/components/wallet/transactions/Transaction.scss
+++ b/source/renderer/app/components/wallet/transactions/Transaction.scss
@@ -365,9 +365,17 @@
     padding: 3px 0 3px 20px;
     width: 100%;
 
+    > span {
+      margin-right: 12px;
+    }
+
     &:last-child {
       padding: 3px 0 0 20px;
     }
+  }
+
+  .assetToken {
+    margin-top: -2px;
   }
 }
 
