DDW-500 Implement design for native tokens - fixes for number formatting

--- a/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
@@ -204,6 +204,10 @@
     opacity: 0.5;
     pointer-events: none;
   }
+
+  &.addAssetButtonFlat {
+    margin-top: 39px;
+  }
 }
 
 .rightContent {
