DDW-500 Implement design for native tokens - fixes no tokens component

--- a/source/renderer/app/components/wallet/summary/WalletSummaryNoTokens.scss
+++ b/source/renderer/app/components/wallet/summary/WalletSummaryNoTokens.scss
@@ -1,5 +1,14 @@
 @import '../../../themes/mixins/animations';
 
+.numberOfAssets {
+  color: var(--theme-transactions-list-group-date-color);
+  font-family: var(--font-regular);
+  font-size: 16px;
+  margin-bottom: -10px;
+  opacity: 0.5;
+  padding: 0 20px 0 40px;
+}
+
 .component {
   padding: 20px;
 
