--- a/source/renderer/app/components/widgets/AssetToken.scss
+++ b/source/renderer/app/components/widgets/AssetToken.scss
@@ -15,6 +15,7 @@
   display: flex;
   position: relative;
   min-width: 0;
+  height: 22px;
 }
 .fingerprint {
   background: var(--theme-widgets-asset-token-fingerprint-background-color);
