[DDW-500] Transactions - adjustments

--- a/source/renderer/app/components/wallet/transactions/Transaction.scss
+++ b/source/renderer/app/components/wallet/transactions/Transaction.scss
@@ -337,7 +337,7 @@
   line-height: 1.38;
 }
 
-.assetsContainer {
+.assetContainer {
   display: flex;
   justify-content: space-between;
   padding: 3px 0 3px 20px;
