[DDW-500] Fix assets dropdown and Tx asset with BN qty

--- a/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
@@ -412,6 +412,10 @@
         display: none !important;
       }
 
+      .SimpleOptions_option {
+        padding: 9px 15px;
+      }
+
       .OptionsOverrides_options {
         left: auto !important;
         right: 52px !important;
