--- a/source/renderer/app/components/wallet/transactions/Transaction.scss
+++ b/source/renderer/app/components/wallet/transactions/Transaction.scss
@@ -133,8 +133,8 @@
 
 .content {
   border-bottom: 1px solid var(--theme-dialog-border-color);
-  margin-left: 74px;
-  margin-right: 10px;
+  margin-left: 84px;
+  margin-right: 20px;
 }
 
 .contentExpanded {
@@ -250,7 +250,7 @@
 
 .detailsExpanded {
   max-height: 100%;
-  padding: 10px 10px 0;
+  padding: 10px 0 0;
 
   > div {
     width: 100%;
