--- a/source/renderer/app/components/wallet/summary/WalletSummaryAssets.scss
+++ b/source/renderer/app/components/wallet/summary/WalletSummaryAssets.scss
@@ -32,7 +32,7 @@
     display: flex;
     justify-content: space-between;
     margin: 10px;
-    padding: 14px 30px 14px 20px;
+    padding: 14px 20px 14px;
     width: calc(50% - 20px);
 
     .assetsLeftContainer {
