--- a/source/renderer/app/components/wallet/WalletAssetsSendConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendConfirmationDialog.scss
@@ -98,6 +98,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 5px;
     width: 100%;
 
     .assetsSeparator {
