--- a/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
@@ -27,7 +27,7 @@
     .fieldsLine {
       border-bottom: var(--theme-bordered-box-border);
       border-left: var(--theme-bordered-box-border);
-      border-radius: 0 0 2px 2px;
+      border-radius: 0 0 0 3px;
       height: 125px;
       left: 10px;
       margin-top: -125px;
@@ -440,14 +440,14 @@
 }
 
 .infoIcon {
-  opacity: 0.4;
+  opacity: 0.3;
   padding-left: 4px;
   position: relative;
-  top: 1px;
+  top: 0;
   transform: translateY(2px);
 
   &:hover {
-    opacity: 0.8;
+    opacity: 0.5;
   }
 
   > svg {
