[DDW-500] Improve token tooltip copy button UX

--- a/source/renderer/app/components/wallet/WalletAssetsSendConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendConfirmationDialog.scss
@@ -67,7 +67,10 @@
   .receiverRow {
     display: flex;
     flex-direction: column;
-    margin-top: 15px;
+
+    & + .receiverRow {
+      margin-top: 15px;
+    }
 
     .receiverRowItem {
       align-items: flex-start;
