--- a/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletAssetsSendForm.scss
@@ -198,8 +198,9 @@
   letter-spacing: 0.5px;
   line-height: 1.2;
   margin-top: 0;
+  padding: 0 8px;
   text-transform: uppercase;
-  width: 143px;
+  width: auto;
 
   &.disabled {
     opacity: 0.5;
@@ -345,17 +346,17 @@
   font-size: 10px;
   font-weight: 500;
   height: 20px;
-  left: 95px;
+  margin: 1px 0 0 10px;
   letter-spacing: 0.5px;
   line-height: 1.2;
-  position: absolute;
+  padding: 0 8px;
   text-transform: uppercase;
-  top: 2px;
-  width: 61.5px;
+  vertical-align: top;
+  width: auto;
   z-index: 1;
 
   &.active {
-    display: block;
+    display: inline-block;
   }
 }
 
@@ -441,10 +442,8 @@
 
 .infoIcon {
   opacity: 0.3;
-  padding-left: 4px;
   position: relative;
   top: 0;
-  transform: translateY(2px);
 
   &:hover {
     opacity: 0.5;
@@ -462,14 +461,10 @@
 
 .assetItem {
   margin-bottom: 20px;
-
-  &.hasButton {
-    margin-top: -20px;
-  }
 }
 
 .minAdaTooltipContent {
-  text-align: center;
+  margin-left: 4px;
 }
 
 :global {
