--- a/source/renderer/app/components/widgets/AssetToken.scss
+++ b/source/renderer/app/components/widgets/AssetToken.scss
@@ -62,8 +62,8 @@
 
     .copyIcon {
       position: absolute;
-      right: -38px;
-      top: 5px;
+      top: 6px;
+      margin-left: 9px;
     }
 
     &:hover {
@@ -115,9 +115,7 @@
     }
 
     .copyIcon {
-      position: absolute;
-      right: -18px;
-      top: 2px;
+      margin-left: 5px;
     }
 
     &:hover {
