--- a/source/renderer/app/components/widgets/AssetToken.scss
+++ b/source/renderer/app/components/widgets/AssetToken.scss
@@ -53,7 +53,8 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  padding: 9px 6px 9px 16px;
+  margin: 0 -12px;
+  padding: 9px 0;
   user-select: text;
 
   .fingerprint {
@@ -75,6 +76,8 @@
 
   dl {
     line-height: 1;
+    margin: 0;
+    padding: 0 0 0 20px;
     width: 100%;
   }
 
@@ -94,10 +97,22 @@
     display: inline-flex;
     font-family: var(--font-light);
     font-size: 12px;
-    line-height: 1.33;
+    line-height: 16px;
+    margin: 10px -20px 0 10px;
+    max-height: 48px;
+    overflow-x: auto;
+    padding-right: 20px;
     position: relative;
-    margin: 10px 0 0 10px;
-    width: calc(100% - 87px);
+    width: calc(100% - 77px);
+
+    &::-webkit-scrollbar-button {
+      display: none;
+    }
+
+    &::-webkit-scrollbar-track {
+      margin-bottom: -8px;
+      margin-top: -8px;
+    }
 
     em {
       &:not(.singleline) {
@@ -151,5 +166,9 @@
 
   .copiedIcon {
     opacity: 1;
+
+    svg {
+      margin-top: 1px;
+    }
   }
 }
