--- a/source/renderer/app/components/wallet/transactions/Transaction.scss
+++ b/source/renderer/app/components/wallet/transactions/Transaction.scss
@@ -1,5 +1,6 @@
 @import '../../../themes/mixins/link';
 @import '../../../themes/mixins/error-message';
+@import '../../../themes/mixins/animations';
 
 .component {
   color: var(--theme-transactions-list-item-details-color);
@@ -374,9 +375,15 @@
 
   h3 {
     display: inline-flex;
+
     > span {
       margin-right: 12px;
       white-space: nowrap;
+
+      &.fetchingTokenData {
+        @include animated-ellipsis($duration: 1500, $width: 16px);
+        --webkit-backface-visibility: hidden;
+      }
     }
   }
 
