--- a/source/renderer/app/components/voting/VotingInfo.scss
+++ b/source/renderer/app/components/voting/VotingInfo.scss
@@ -26,7 +26,7 @@
     @extend %regularText;
     color: var(--theme-voting-font-color-regular);
     font-family: var(--font-light);
-    margin-bottom: 10px;
+    margin-bottom: 11px;
     text-align: left;
   }
 
@@ -55,6 +55,8 @@
 
     .learnMoreLink {
       border-bottom: 0;
+      font-family: var(--font-regular);
+      font-size: 16px;
 
       &::after {
         height: 0;
