[DDW-558] Keep custom URL while syncing

--- a/source/renderer/app/components/settings/categories/StakePoolsSettings.scss
+++ b/source/renderer/app/components/settings/categories/StakePoolsSettings.scss
@@ -43,6 +43,9 @@
       border-color: var(--rp-input-border-color-errored);
     }
   }
+  &.syncing {
+    display: none;
+  }
 }
 .smashServerUrlError {
   @include error-message;
