[DDW-558] Styling adjustment

--- a/source/renderer/app/components/settings/categories/StakePoolsSettings.scss
+++ b/source/renderer/app/components/settings/categories/StakePoolsSettings.scss
@@ -64,7 +64,7 @@
     margin-bottom: 12px;
   }
   b {
-    font-family: var(--font-bold);
+    font-family: var(--font-semibold);
   }
   :global {
     .SimpleLink_root {
