DDW-518 - Tile view of stake pools ranked by rewards - ada symbol color change

--- a/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
+++ b/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
@@ -52,6 +52,14 @@
         margin-left: 3px;
         opacity: 0.5;
         width: 10px;
+
+        & > g {
+          & > g {
+            stroke: var(
+                --theme-staking-wallet-row-ticker-ada-icon-fill-color
+            );
+          }
+        }
       }
     }
   }
