DDW-518 - Tile view of stake pools ranked by rewards - disabling ranked view for mainnet

--- a/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
+++ b/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
@@ -55,9 +55,7 @@
 
         & > g {
           & > g {
-            stroke: var(
-                --theme-staking-wallet-row-ticker-ada-icon-fill-color
-            );
+            stroke: var(--theme-staking-wallet-row-ticker-ada-icon-fill-color);
           }
         }
       }
